# cecs

./: .clangd  .gitignore  CMakeLists.txt  README.md
cecs/: CMakeLists.txt
cecs/include/: allocator.hpp  buffer_layout.hpp  entity.hpp  soa.hpp  type_list.hpp  utils.hpp  world.hpp
examples/: CMakeLists.txt
examples/ant/: CMakeLists.txt
examples/ant/src/: main.cpp
examples/arcanoid/: CMakeLists.txt
examples/arcanoid/src/: main.cpp
examples/screaming_bugs/: CMakeLists.txt
examples/screaming_bugs/src/: main.cpp
tests/: CMakeLists.txt  buffer_layout_test.cpp  soa_test.cpp  type_list_test.cpp  uitls_test.cpp  world_test.cpp
